# incubator-impala

./: .clang-format  CMakeLists.txt
be/: CMakeLists.txt
be/generated-sources/gen-cpp/: CMakeLists.txt
be/src/benchmarks/: bloom-filter-benchmark.cc  convert-timestamp-benchmark.cc  row-batch-serialize-benchmark.cc
be/src/catalog/: CMakeLists.txt  catalog-server.cc  catalog-server.h  catalogd-main.cc
be/src/codegen/: CMakeLists.txt
be/src/common/: CMakeLists.txt  global-types.h  init.cc  status.cc  status.h
be/src/exec/: CMakeLists.txt  blocking-join-node.cc  catalog-op-executor.cc  data-sink.cc  data-source-scan-node.cc  data-source-scan-node.h  hdfs-orc-scanner.cc  kudu-util.h  parquet-column-readers.cc
be/src/experiments/: CMakeLists.txt
be/src/exprs/: CMakeLists.txt  decimal-operators-ir.cc  decimal-operators.h  expr-test.cc  literal.cc  timestamp-functions-ir.cc  timestamp-functions.cc  timezone_db.cc  timezone_db.h
be/src/rpc/: CMakeLists.txt  TAcceptQueueServer.cpp  auth-provider.h  authentication-export.h  authentication-test.cc  authentication.cc  common.proto  impala-service-pool.cc  impala-service-pool.h  rpc-mgr-test.cc  rpc-mgr.cc  rpc-mgr.h  rpc-mgr.inline.h  rpc-trace.cc  rpc-trace.h  rpc.h  rpc_test.proto  thrift-server-test.cc  thrift-util.h
be/src/runtime/: CMakeLists.txt  backend-client.h  client-cache-types.h  coordinator-backend-state.cc  coordinator-backend-state.h  coordinator-filter-state.h  coordinator.cc  coordinator.h  data-stream-mgr.cc  data-stream-mgr.h  data-stream-recvr.cc  data-stream-recvr.h  data-stream-sender.cc  data-stream-sender.h  data-stream-test.cc  exec-env.cc  exec-env.h  fragment-instance-state.cc  fragment-instance-state.h  free-pool.h  krpc-data-stream-mgr.cc  krpc-data-stream-mgr.h  krpc-data-stream-recvr.cc  krpc-data-stream-recvr.h  krpc-data-stream-sender.cc  mem-pool.cc  query-state.cc  (+13 more)
be/src/statestore/: CMakeLists.txt  statestore-subscriber.cc  statestore-subscriber.h  statestore-test.cc  statestore.cc  statestore.h  statestore.proto  statestored-main.cc
cmake_modules/: FindCctz.cmake
common/thrift/: CMakeLists.txt  ExecStats.thrift  Frontend.thrift  ImpalaInternalService.thrift  ImpalaService.thrift  Planner.thrift  Results.thrift  StatestoreService.thrift  Types.thrift  generate_error_codes.py
docs/: impala.ditamap  impala_sqlref.ditamap
docs/shared/: ImpalaVariables.xml  impala_common.xml
docs/topics/: impala_abort_on_default_limit_exceeded.xml  impala_abort_on_error.xml  impala_aggregate_functions.xml  impala_aliases.xml  impala_allow_unsupported_formats.xml  impala_alter_table.xml  impala_alter_view.xml  impala_analytic_functions.xml  impala_appx_count_distinct.xml  impala_appx_median.xml  impala_array.xml  impala_avg.xml  impala_batch_size.xml  impala_bigint.xml  impala_bit_functions.xml  impala_boolean.xml  impala_char.xml  impala_comments.xml  impala_complex_types.xml  impala_compression_codec.xml  impala_compute_stats.xml  impala_conditional_functions.xml  impala_conversion_functions.xml  impala_count.xml  impala_create_database.xml  impala_create_function.xml  impala_create_role.xml  impala_create_table.xml  impala_create_view.xml  impala_databases.xml  impala_datetime_functions.xml  impala_debug_action.xml  impala_decimal.xml  impala_default_order_by_limit.xml  impala_delete.xml  impala_describe.xml  impala_disable_codegen.xml  impala_disable_unsafe_spills.xml  impala_distinct.xml  impala_dml.xml  (+84 more)
tests/custom_cluster/: test_breakpad.py  test_exchange_delays.py  test_query_expiration.py  test_rpc_timeout.py
tests/query_test/: test_queries.py  test_query_resource_limits.py  test_runtime_filters.py
tests/stress/: test_mini_stress.py
www/: common-header.tmpl  rpcz.tmpl
(+92 files in other folders)
